放行流程委外业务增加可从K3委外出库单拉取信息

--- a/EmpInfo/Views/Apply/CheckFXApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckFXApply.cshtml
@@ -328,7 +328,7 @@
                     @h.take_out_people_type
                 </span>
             </div>
-            if (h.take_out_people_type != "申请人") {
+            if (!string.IsNullOrEmpty(h.take_out_people_name)) {
                 <div class="b-div">
                     <span class="b-label">
                         带出人姓名:
