--- a/EmpInfo/Views/ApplyExtra/FillFxForm.cshtml
+++ b/EmpInfo/Views/ApplyExtra/FillFxForm.cshtml
@@ -77,7 +77,7 @@
                     title:"查询K3供应商",
                     confirmButtonText:"开始搜索",
                     controls:[{ text: "供应商", name: "supplierName", defaultValue: $(self).val(), placeholder: "输入供应商编码或名称搜索" }],
-                    callback: function (result) { 
+                    callback: function (result) {
                         var v=result.supplierName;
                         if(v.length<=2){
                             toastr.error("请至少输入3个字符再搜索");
@@ -104,52 +104,18 @@
                         }
                         return false;
                     }
-                });                    
+                });
             }
         });
 
-            //上传附件控件
-            $("#myUploader").myUploader({
-                sysNum: "@m.sysNo",
-                fileNumLimit: 5,
-                accept: {
-                    title: '*',
-                    extensions: '*',
-                    mimeTypes: '*'
-                }
-        });
-
-        //上传excel并读取存入表格
-        $("<div></div>").myUploaderSim({
-            server: '../File/BeginUpload',
-            pick: "#excelBt",
-            duplicate: true, //可重复上传
+        //上传附件控件
+        $("#myUploader").myUploader({
+            sysNum: "@m.sysNo",
+            fileNumLimit: 5,
             accept: {
-                title: 'MS-EXCEL',
-                extensions: 'xls,xlsx',
-                mimeTypes: 'application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'
-            },
-            //上传成功后的回调
-            successCallback: function (file,res) {
-                toastr.success("上传成功！正在读取内容...");
-                $.post("../File/FXReadExcelData",{sysNum:"@m.sysNo",fileName:file.name},function(data){
-                    if(!data.suc){
-                        toastr.error(data.msg);
-                        return;
-                    }
-                    toastr.success(data.msg);
-
-                    var result = JSON.parse(data.extra);
-                    var idx = 0;
-                    result.map(function(r){r.idx=idx++;});
-
-                    $("#tb").bootstrapTable('load',result);
-
-                });
-            },
-            //上传之前的验证与设置formdata
-            beforeQueued: function (uploader) {
-                uploader.option("formData", { sysNum:"@m.sysNo" });
+                title: '*',
+                extensions: '*',
+                mimeTypes: '*'
             }
         });
 
@@ -245,8 +211,9 @@
         self.outerHasSelfItems=ko.observable(false);
 
         self.isSelfTaken = "@m.fxType.type_no".indexOf("2") == 0;//是否自提单
-        self.takeOutPeopleTypes = ["申请人", "信利员工", "驻厂人员", "外来人员"];//带出人类型
-        self.companies = ["光电", "半导体", "电子", "仪器", "工业", "信元", "光电科技"]; //公司
+        self.isOutStock28 = ("1.4.1" == "@m.fxType.type_no" || "2.4.1" == "@m.fxType.type_no"); //是否委外物品流程，28是K3的trantype
+        self.takeOutPeopleTypes = ["申请人","运输科司机", "信利员工", "驻厂人员", "外来人员"];//带出人类型
+        self.companies = ["光电", "半导体", "电子", "仪器", "工业", "信元光电", "光电科技","光电仁寿"]; //公司
         self.fromAddrs = ["汕尾信利工业城一厂区","汕尾信利工业城二厂区","汕尾红草厂区"]; //放行厂区
         self.toScopes = ["集团内","省内", "省外", "港澳台", "国外"]; //范围
         self.typeDemands = @Html.Raw(m.typeDemands); //业务类型特定要求
@@ -268,19 +235,19 @@
             var processNodes = "@Html.Raw(m.fxType.type_process)".split(">").filter(function (t) { return t != "部门负责人"; }); //部门负责人不用再次选择，每个流程都有
             var proInfo = @Html.Raw(m.fxType.process_info);
 
-                for(var i=0;i<processNodes.length;i++){
-                    var node = processNodes[i];
-                    if(proInfo.user_select.indexOf(node)>=0){
-                        //从列表选项选择的
-                        GenSelectField(node);
-                        self.typeDemandFieldNames.push(node);
-                    }
-                    if(proInfo.user_input.indexOf(node)>=0){
-                        //直接选择审核人
-                        GenSelectUser(node);
-                        self.typeDemandFieldNames.push(node);
-                    }
+            for(var i=0;i<processNodes.length;i++){
+                var node = processNodes[i];
+                if(proInfo.user_select.indexOf(node)>=0){
+                    //从列表选项选择的
+                    GenSelectField(node);
+                    self.typeDemandFieldNames.push(node);
                 }
+                if(proInfo.user_input.indexOf(node)>=0){
+                    //直接选择审核人
+                    GenSelectUser(node);
+                    self.typeDemandFieldNames.push(node);
+                }
+            }
 
         })();
 
@@ -431,7 +398,7 @@
 
     }
     ko.applyBindings(new FormModel());
-    </script>
+</script>
 
     <script>
         $("#tb").bootstrapTable({
@@ -481,6 +448,10 @@
                 if (rows.length == 0) {
                     toastr.error("请先选择一行后再修改");
                     return;
+                }                
+                if(rows[0].comment.indexOf("k3导入")==0){
+                    toastr.error("从K3导入的不能修改");
+                    return;
                 }
                 var row = rows[0];
                 updateIndex = row.idx;
@@ -518,11 +489,84 @@
                     toastr.error("请先选择一行后再删除");
                     return;
                 }
-                openConfirmDialog("确定要删除选中的行吗？", function () {
-                    console.log(rows[0].idx);
-                    $("#tb").bootstrapTable('removeByUniqueId', rows[0].idx);
+                if(rows[0].comment.indexOf("k3导入")==0){
+                    openConfirmDialog("删除从K3导入的数据时，只能批量全部删除，确定吗？", function () {
+                        var beforeData=$("#tb").bootstrapTable("getData");
+                        var afterData=beforeData.filter(function(b){return b.comment != rows[0].comment;});
+                        $("#tb").bootstrapTable('load', afterData);
+                    });
+                }else{
+                    openConfirmDialog("确定要删除选中的行吗？", function () {
+                        console.log(rows[0].idx);
+                        $("#tb").bootstrapTable('removeByUniqueId', rows[0].idx);
+                    });
+                }
+            });
+
+            //上传excel并读取存入表格
+            $("<div></div>").myUploaderSim({
+                server: '../File/BeginUpload',
+                pick: "#excelBt",
+                duplicate: true, //可重复上传
+                accept: {
+                    title: 'MS-EXCEL',
+                    extensions: 'xls,xlsx',
+                    mimeTypes: 'application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'
+                },
+                //上传成功后的回调
+                successCallback: function (file,res) {
+                    toastr.success("上传成功！正在读取内容...");
+                    $.post("../File/FXReadExcelData",{sysNum:"@m.sysNo",fileName:file.name},function(data){
+                        if(!data.suc){
+                            toastr.error(data.msg);
+                            return;
+                        }
+                        toastr.success(data.msg);
+
+                        var result = JSON.parse(data.extra);
+                        result.map(function(r){ r.idx = addIndex++; });
+
+                        $("#tb").bootstrapTable('append',result);
+                    });
+                },
+                //上传之前的验证与设置formdata
+                beforeQueued: function (uploader) {
+                    uploader.option("formData", { sysNum:"@m.sysNo" });
+                }
+            });
+
+            //导入委外出库单信息
+            $("#stock28Bt").on("click",function(){
+                var company=$("#company").val();
+                if(company==""){
+                    toastr.error("请先选择公司");
+                    return;
+                }
+                var dialog = $.inputDialog({
+                    title:"导入K3委外出库单",
+                    confirmButtonText:"查询并导入",
+                    controls:[{ text: "委外出库单号", name: "billno", defaultValue: "", placeholder: "请输入单号，所在帐套："+company }],
+                    callback: function (result) {
+                        var v=result.billno;
+                        if(v.length<=6){
+                            toastr.error("请输入正确的单号再查询");
+                        }else{
+                            $.post("../Item/GetK3StockBill28",{account:company,billNo:v},function(data){
+                                if(data.length==0){
+                                    toastr.error("在K3查询不到相关委外单信息");
+                                }else{
+                                    dialog.close();
+                                    toastr.success("数据导入成功");
+                                    data.map(function(d){ d.idx = addIndex++;d.comment="k3导入：" + v });
+                                    $("#tb").bootstrapTable('append',data);
+                                }
+                            });
+                        }
+                        return false;
+                    }
                 });
             });
+
         });
 
     </script>
@@ -668,7 +712,7 @@
                     公司:
                 </span>
                 <span class="b-input">
-                    <select class="form-control" name="company" data-bind="options:companies,optionsCaption:'----下拉选择公司----',value:'@m.company'" required></select>
+                    <select class="form-control" name="company" id="company" data-bind="options:companies,optionsCaption:'----下拉选择公司----',value:'@m.company'" required></select>
                 </span>
             </div>
             <div class="b-div">
@@ -860,8 +904,11 @@
                 <div class="b-input">
                     <button class="btn btn-success btn-sm" type="button" id="addBt" style="margin-top:6px;"> <i class="fa fa-plus"></i> 新增</button>
                     <button class="btn btn-warning btn-sm" type="button" id="excelBt" title="导入模板见操作说明" style="margin-top:6px;"> <i class="fa fa-upload"></i> 从excel导入 </button>
+                    <!-- ko if:isOutStock28 -->
+                    <button class="btn btn-warning btn-sm" type="button" id="stock28Bt" title="从K3委外出库单导入" style="margin-top:6px;"> <i class="fa fa-upload"></i> 从K3委外出库导入 </button>  
+                    <!--/ko-->                  
                     <button class="btn btn-primary btn-sm" type="button" id="editBt" title="双击数据行也可修改" style="margin-top:6px;"> <i class="fa fa-edit"></i> 修改 </button>
-                    <button class="btn btn-danger btn-sm" type="button" id="removeBt" style="margin-top:6px;"> <i class="fa fa-th"></i> 删除</button>
+                    <button class="btn btn-danger btn-sm" type="button" id="removeBt" style="margin-top:6px;"> <i class="fa fa-remove"></i> 删除</button>
                 </div>
             </div>
             <table data-toggle="table" id="tb"></table>
